--- a/src/components/label/label.css
+++ b/src/components/label/label.css
@@ -1,7 +1,7 @@
 .label {
   display: inline-flex;
   flex-direction: row;
-  padding: 8px;
-  margin: 8px;
+  padding: 5px;
+  font-size: 12px;
   border: 1px solid black;
 }
